<resources>
    <string name="app_name">IMusic</string>
    <string name="label_login_welcome">登录</string>
    <string name="label_submit">提交</string>
    <string name="label_login">登录</string>
    <string name="label_phone">电话</string>
    <string name="label_register">注册</string>
    <string name="label_password">密码</string>
    <string name="label_name">名字</string>
    <string name="label_go_register">没有账户？去注册</string>
    <string name="label_go_login">已有账户？去登录</string>
    <string name="label_register_welcome">欢迎您!</string>
    <string name="label_cancellation">注消登录</string>
    <string name="label_refresh_musics">刷新列表</string>
    <string name="label_exit">退出</string>
    <string name="label_hello">Hello,</string>

    <!--Toast提示-->
    <string name="error_phone_input">电话输入格式错误，要输入11位哦</string>
    <string name="error_phone_empty_input">电话不能为空哦</string>
    <string name="error_name_input">名字不能为空哦</string>
    <string name="error_password_input">密码不能为空哦</string>
    <string name="register_success">注册成功!</string>
    <string name="login_fail">登录失败！</string>
    <string name="refresh_success">刷新成功！</string>
    <string name="none_Song">您的手机目前没有歌曲，本程序没有用武之地哦~</string>

    <string name="title_assist_permissions">授予权限</string>
    <string name="label_permission_read">读取文件权限</string>
    <string name="label_permission_read_desc">用于读取本地的歌曲信息</string>
    <string name="label_permission_submit">授权</string>
    <string name="label_permission_ok">授权成功</string>
</resources>
