<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:apps="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/im_portrait"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:background="@drawable/bg_dark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hello"
        android:textSize="@dimen/font_32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/txt_hello"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        apps:text="@string/app_name"
        android:textSize="@dimen/font_32"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/txt_hello"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/im_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/ic_refresh"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait"
        android:layout_marginStart="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/label_refresh_musics"
        android:textColor="@color/black"
        android:textSize="@dimen/font_28"
        android:id="@+id/txt_refresh"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait"
        app:layout_constraintLeft_toRightOf="@+id/im_refresh"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cancellation"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="28dp"
        android:id="@+id/im_cancellation"
        android:layout_marginStart="28dp"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait" />

    <TextView
        android:id="@+id/txt_cancellation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cancellation"
        android:textColor="@color/black"
        android:textSize="@dimen/font_28"
        app:layout_constraintLeft_toRightOf="@+id/im_cancellation"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="210dp"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_exit"
        android:id="@+id/im_exit"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait" />

    <TextView
        android:id="@+id/txt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exit"
        android:textColor="@color/black"
        android:textSize="@dimen/font_28"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/im_exit"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toBottomOf="@+id/im_portrait" />
</android.support.constraint.ConstraintLayout>